# vision_25

./: .gitignore  CMakeLists.txt  MODEL_MAPPING.md  readme.md
assets/: yolov5_0526.xml
calibration/: calibrate_camera.cpp  capture.cpp
configs/: ascento.yaml  calibration.yaml  demo.yaml  example.yaml  mvs.yaml  sentry.yaml  standard.yaml  standard3.yaml  standard4.yaml  uav.yaml
io/gimbal/: gimbal.cpp  gimbal.hpp
io/hikrobot/: hikrobot.cpp  hikrobot.hpp
io/mindvision/: mindvision.cpp
src/: auto_aim_debug_mpc.cpp  auto_buff_debug.cpp  mt_auto_aim_debug_mpc.cpp  mt_auto_aim_mpc.cpp  mt_standard.cpp  sentry.cpp  sentry_bp.cpp  sentry_debug.cpp  sentry_multithread.cpp  standard.cpp  standard_mpc.cpp  uav.cpp  uav_debug.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  armor.cpp  armor.hpp  classifier.cpp  outpost_target.cpp  outpost_target.hpp  shooter.cpp  solver.cpp  solver.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp
tasks/auto_aim/multithread/: commandgener.cpp  commandgener.hpp
tasks/auto_aim/planner/: planner.cpp  planner.hpp
tasks/auto_aim/yolos/: yolo11.cpp  yolov5.cpp  yolov5.hpp  yolov8.cpp
tasks/auto_buff/: CMakeLists.txt  buff_aimer.cpp
tasks/omniperception/: CMakeLists.txt
tests/: camera_thread_test.cpp  gimbal_response_test.cpp
tools/: CMakeLists.txt  check_yaml_dupes.py  debug_recorder.hpp  thread_pool.hpp  thread_safe_queue.hpp  timing_validator.hpp  visualizer_3d.cpp  visualizer_3d.hpp
